--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-{% block title %} conatct  {% endblock title%}
+{% block title %} contact  {% endblock title%}
 {% block body %}
 
 <img class="gee" src="https://source.unsplash.com/random/?contact,phone" alt="img">
