--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,7 +36,7 @@
                                                 <div class="input-group-prepend">
                                                     <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
                                                 </div>
-                                                <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Name...." required>
+                                                <input type="text" class="form-control" id="name" name="name" placeholder="Name...." required>
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -44,7 +44,7 @@
                                                 <div class="input-group-prepend">
                                                     <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
                                                 </div>
-                                                <input type="email" class="form-control" id="nombre" name="email" placeholder="example@gmail.com" required>
+                                                <input type="email" class="form-control" id="name" name="email" placeholder="example@gmail.com" required>
                                             </div>
                                         </div>
         
@@ -53,7 +53,7 @@
                                                 <div class="input-group-prepend">
                                                     <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
                                                 </div>
-                                                <textarea class="form-control" placeholder="enter your message..." required></textarea>
+                                                <textarea class="form-control" name="desc" placeholder="enter your message..." required></textarea>
                                             </div>
                                         </div>
         
