--- a/templates/base.html
+++ b/templates/base.html
@@ -72,9 +72,23 @@ h1{
           <button type="button" class="btn btn-primary">Sign Up</button>
         </div>
       </nav>
+
+
       
     
+      
 
+
+      {% if messages %}
+      {% for message in messages %}
+      <div class="alert alert-{{ message.tags }} dismissible fade show my-0" role="alert">
+        {{ message }}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      {% endfor %}
+    {% endif %}
 
    {% block body %} {% endblock body %}
 
