--- a/templates/base.html
+++ b/templates/base.html
@@ -81,8 +81,8 @@ h1{
 
       {% if messages %}
       {% for message in messages %}
-      <div class="alert alert-{{ message.tags }} dismissible fade show my-0" role="alert">
-        {{ message }}
+      <div class="alert alert-{{ message.tags }} alert-success dismissible fade show my-0" role="alert">
+        <strong>{{ message }}</strong>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
