--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,6 +3,8 @@
 {% block body %}
 
 
+
+
 <section class="vh-100" style="background-color: #eee;">
     <div class="container h-100">
       <div class="row d-flex justify-content-center align-items-center h-100">
@@ -14,13 +16,13 @@
   
                   <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
   
-                  <form class="mx-1 mx-md-4">
-  
+                  <form method="POST" action="/register"  class="mx-1 mx-md-4">
+                           {% csrf_token  %}
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <input type="text" id="form3Example1c" class="form-control" />
-                        <label class="form-label" for="form3Example1c">Your Name</label>
+                        <label class="form-label" for="form3Example1c" name="name">Your Name</label>
                       </div>
                     </div>
   
@@ -28,7 +30,7 @@
                       <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <input type="email" id="form3Example3c" class="form-control" />
-                        <label class="form-label" for="form3Example3c">Your Email</label>
+                        <label class="form-label" for="form3Example3c" name="email"> Your Email</label>
                       </div>
                     </div>
   
@@ -36,7 +38,7 @@
                       <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <input type="password" id="form3Example4c" class="form-control" />
-                        <label class="form-label" for="form3Example4c">Password</label>
+                        <label class="form-label" for="form3Example4c" name="password">Password</label>
                       </div>
                     </div>
   
@@ -44,7 +46,7 @@
                       <i class="fas fa-key fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <input type="password" id="form3Example4cd" class="form-control" />
-                        <label class="form-label" for="form3Example4cd">Repeat your password</label>
+                        <label class="form-label" for="form3Example4cd " name="rpassword">Repeat your password</label>
                       </div>
                     </div>
   
