--- a/templates/signup.html
+++ b/templates/signup.html
@@ -16,13 +16,13 @@
   
                   <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
   
-                  <form method="POST" action="/register"  class="mx-1 mx-md-4">
+                  <form  action="/signup" method="POST" class="mx-1 mx-md-4">
                            {% csrf_token  %}
                     <div class="d-flex flex-row align-items-center mb-4">
                       <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                       <div class="form-outline flex-fill mb-0">
                         <input type="text" id="form3Example1c" class="form-control" />
-                        <label class="form-label" for="form3Example1c" name="name">Your Name</label>
+                        <label class="form-label" for="form3Example1c" name="username">Your Name</label>
                       </div>
                     </div>
   
@@ -50,20 +50,8 @@
                       </div>
                     </div>
   
-                    <div class="form-check d-flex justify-content-center mb-5">
-                      <input
-                        class="form-check-input me-2"
-                        type="checkbox"
-                        value=""
-                        id="form2Example3c"
-                      />
-                      <label class="form-check-label" for="form2Example3">
-                        I agree all statements in <a href="#!">Terms of service</a>
-                      </label>
-                    </div>
-  
                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                      <button type="button" class="btn btn-primary btn-lg">Register</button>
+                      <input type="submit" value="sign up" class="btn btn-primary btn-lg">
                     </div>
   
                   </form>
